geonames api data

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,17 +10,18 @@
 
     <header>
         <div class="">
-            <h1>News Article</h1>
-            <h3>Sentiment Analysis</h3>
+            <h1>Travel App</h1>
         </div>
     </header>
 
     <main>
         <section>
             <form class="">
-                <input id="name" type="text" name="input" value=""
-                    placeholder="Please enter a URL to an article">
-                <button id="btnSubmit" type="button" name="" value="submit">Submit</button>
+                <h3>Explore your next destination</h3>
+                <input id="destination" type="text" name="input" value="" placeholder="destination">
+                <input id="arrival" type="date" name="input" value="" placeholder="Arival" min="2021-01-01" max="2030-12-31">
+                <input id="departure" type="date" name="input" value="" placeholder="Departure" min="2021-01-01" max="2030-12-31">
+                <button id="btnSubmit" type="button" name="" value="search">Search</button>
             </form>
         </section>
         <!-- URL data  -->
