--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,7 +18,7 @@
         <section>
             <form class="">
                 <h3>Explore your next destination</h3>
-                <input id="destination" type="text" name="input" value="" placeholder="destination">
+                <input id="destination" type="text" name="input" value="destination" placeholder="destination">
                 <input id="arrival" type="date" name="input" value="" placeholder="Arival" min="2021-01-01" max="2030-12-31">
                 <input id="departure" type="date" name="input" value="" placeholder="Departure" min="2021-01-01" max="2030-12-31">
                 <button id="btnSubmit" type="button" name="" value="search">Search</button>
