--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -19,7 +19,7 @@
             <form class="">
                 <h3>Explore your next destination</h3>
                 <input id="destination" type="text" name="input" value="" placeholder="Your destination">
-                <input id="departure" type="date" name="input" value="" placeholder="Departure" min="2021-01-01" max="2030-12-31">
+                <input id="departure" type="date" name="input" value="" placeholder="Departure" onkeydown="return false" min="" max="2030-12-31" >
                 <button id="btnSubmit" type="button" name="" value="search">Search</button>
             </form>
         </section>
