--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>News Article Sentiment Analysis</title>
+    <title>Travel App</title>
 </head>
 
 <body>
