--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,23 +1,37 @@
-form {
-    border: 1px solid #545454;
-    border-radius: 3px;
-    padding: 40px;
+.form-container {
+    display: flex;
+    
 }
 
-input,
-button {
-    padding: 5px 20px;
+.main-form {
+    background-color: #fff;
+    box-shadow: 0 0 10px #ccc;
+    border-radius: 10px;
+    padding: 40px;
+    margin: 200px auto;
+}
+
+input {
+    padding: 10px 20px;
     width: 100%;
-    line-height: 16px;
+    line-height: 12px;
     margin: 10px 0;
+    border-radius: 5px;
+    border: solid #ccc 2px;
+}
+
+button {
+    width: 100%;
+    margin-top: 15px;
+    padding: 10px 20px;
+    color: #fff;
+    background-color: #3aa1e0;
+    border: none;
+    border-radius: 5px;
 }
 
 h3 {
+    margin-bottom: 20px;
     font-size: 36px;
     font-weight: 500;
-}
-
-.arrival,
-.departure {
-    
 }
