--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,11 +1,14 @@
-header {
-    display: flex;
-    justify-content: center;
-    padding: 20px 60px;
-    font-family: 'Courier New', Courier, monospace;
-}
+// header {
+//     display: flex;
+//     justify-content: center;
+//     padding: 20px 60px;
+//     font-family: 'Courier New', Courier, monospace;
+// }
 
-h1 {
-    font-size: 56px;
-    font-weight: 550;
-}
+.header-background {
+    height: 700px;
+    background-image: url("../media/header.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+ }
