Added HTML for card section

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <!-- URL data  -->
-        <section id="resluts-container">
+        <!-- <section id="card-container">
             <h1>Your wonderful destination</h1>
             <div id="destination-result">
                 <img class="card-img" src="./assets/images/amd.jpg" alt="AMD CPUs">
@@ -33,6 +33,18 @@
                     <p class="card-text">How many Central Processing Unit generations are there?</p>
                 </div>
             </div>
+        </section> -->
+        <section id="card-container">
+            <img id="cityImg" src="" alt="">
+            <article>
+                <h2 id="desTitle"></h2>
+                <h3 id="countdown"></h3>
+                <img id="weatherIcon" src="" alt="">
+                <div id="info">
+                    <h3 id="temp"></h3>
+                    <h3 id="description"></h3>
+                </div>
+            </article>
         </section>
     </main>
 
