--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -12,7 +12,7 @@
         <div class="header-background">
             <section class="form-container">
                 <form class="main-form">
-                    <h3>Explore your next destination</h3>
+                    <h2>Explore your next destination</h2>
                     <input id="destination" type="text" name="input" value="" placeholder="Location">
                     <input id="departure" type="date" name="input" value="" placeholder="Departure"
                         onkeydown="return false" min="" max="2030-12-31">
@@ -23,23 +23,12 @@
     </header>
 
     <main>
-        <!-- URL data  -->
-        <!-- <section id="card-container">
-            <h1>Your wonderful destination</h1>
-            <div id="destination-result">
-                <img class="card-img" src="./assets/images/amd.jpg" alt="AMD CPUs">
-                <div class="card-content">
-                    <h2 class="card-header">CPUs Gen</h2>
-                    <p class="card-text">How many Central Processing Unit generations are there?</p>
-                </div>
-            </div>
-        </section> -->
-        <section id="card-container">
-            <img id="cityImg" src="" alt="">
+        <section id="card-container" style="">
+            <img id="cityImg" src="">
             <article>
                 <h2 id="desTitle"></h2>
                 <h3 id="countdown"></h3>
-                <img id="weatherIcon" src="" alt="">
+                <img id="weatherIcon" src="">
                 <div id="info">
                     <h3 id="temp"></h3>
                     <h3 id="description"></h3>
