--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -14,9 +14,61 @@ section {
 }
 
 #card-container {
-    border: solid 1px #fa3;
+    border-radius: 8px;
+    transition: box-shadow 0.3s;
+    margin-top: 70px;
+    width: 60%;
+    margin-left: 50%;
+    transform: translateX(-50%);
 
+    article {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        width: 48%;
+        height: 80%;
+
+        h2 {
+            color: #adb5bd;
+            margin-bottom: 20px;
+            font-size: 36px;
+            font-weight: 500;
+        }
+    }
 }
+
+h3 {
+    font-weight: 100;
+    color: #adb5bd;
+}
+
+#description,
+#temp {
+    padding-left: 50%;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0em;
+    margin-inline-end: 0em;
+    color: white;
+    font-family: 'Lexend Giga', sans-serif;
+}
+
+#description {
+    font-size: 1.5vw;
+}
+
+#temperature {
+    font-size: 4.5vw;
+}
+
+#cityImg {
+    width: 50%;
+    margin-bottom: -3px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+
 
 h1 {
     padding-top: 50px;
@@ -25,14 +77,28 @@ h1 {
     color: rgba(0,0,0,1);
 }
 
-// #results {
-//     font-size: 24px;
-//     line-height: 40px;
-//     background-color: #878178;
-// }
+@media only screen and (max-width: 760px) {
+    #card-container {
+        width: 90%;
+    }
 
-// #form_header {
-//     font-size: 36px;
-//     line-height: 40px;
-//     padding-bottom: 10px;
-// }
+    #btnSubmit {
+        font-size: 15px;
+    }
+
+    h3 {
+        font-size: 2vw;
+    }
+
+    h2 {
+        font-size: 3.7vw;
+    }
+
+    #temp {
+        font-size: 7vw;
+    }
+
+    #description {
+        font-size: 2.5vw;
+    }
+}
